--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,19 +2,23 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wisecow-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  rules:
-    - host: yourdomain.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: wisecow-service
-                port:
-                  number: 443
   tls:
-    - hosts:
-        - yourdomain.com
-      secretName: wisecow-tls
+  - hosts:
+    - wisecow.example.com
+    secretName: wisecow-tls
+
+  rules:
+  - host: wisecow.example.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: wisecow-service
+            port:
+              number: 4499
+
